--- a/PythonBasics.ipynb
+++ b/PythonBasics.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "PythonBasics.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
       "authorship_tag": "ABX9TyPViYn1Rh3vJQWNtSZmk7iV",
       "include_colab_link": true
