--- a/PythonBasics.ipynb
+++ b/PythonBasics.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMw+bmIEAzT+FhJ9fBmyjGr",
+      "authorship_tag": "ABX9TyPMGF91iSZqU8dqh7NLNh1X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1305,7 +1305,7 @@
       "source": [
         "# References\n",
         "\n",
-        "The text and exercises of this notebook are selected from the python tutorial at w3schools.com."
+        "The material of this notebook excluding the exercises are selected from the python tutorial at w3schools.com."
       ]
     }
   ]
