--- a/PythonBasics.ipynb
+++ b/PythonBasics.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPMGF91iSZqU8dqh7NLNh1X",
+      "authorship_tag": "ABX9TyOcnVBpy1sDW87mXlXWRtpP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1295,6 +1295,20 @@
       },
       "source": [
         "**Exercise 1.13:** Redo exercise 1.11 by reading the variable **x** from a file and writing the output statement to a file."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ESYSNihf06sL"
+      },
+      "source": [
+        "# General Exercises\n",
+        "**Exercise 1.14:** Write a python code that .\n",
+        "\n",
+        "**Exercise 1.15:** Write a python code that .\n",
+        "\n",
+        "**Exercise 1.16:** Write a python code that ."
       ]
     },
     {
