--- a/PythonBasics.ipynb
+++ b/PythonBasics.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOcnVBpy1sDW87mXlXWRtpP",
+      "authorship_tag": "ABX9TyNNhsKNU/fZOIGyWMSLSeI8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
         "print(y)\n",
         "print(z)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
         "x = \"Sally\" # x is now of type str\n",
         "print(x)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
         "my-var = \"John\"\n",
         "my var = \"John\""
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -204,7 +204,7 @@
         "z =  x + y\n",
         "print(z)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +240,7 @@
         "y = 10\n",
         "print(x + y)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +523,7 @@
         "print (x) ## print the value of x \n",
         "print(type(x)) ## to print the data type"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,7 +565,7 @@
         "print (x['name'])\n",
         "print (x['age'])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,7 +609,7 @@
         "print (y) ## print the value of x \n",
         "print(type(y)) ## to print the data type  "
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,7 +643,7 @@
         "print (y) ## print the value of x \n",
         "print(type(y)) ## to print the data type  "
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -677,7 +677,7 @@
         "print (y) ## print the value of x \n",
         "print(type(y)) ## to print the data type  "
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1304,7 +1304,7 @@
       },
       "source": [
         "# General Exercises\n",
-        "**Exercise 1.14:** Write a python code that .\n",
+        "**Exercise 1.14:** Write a python code that creates two string variables and two floating-point number variables. The first string should contain your first name. The second string should contain your family name. The two floating numbers should contain two random numbers. After creating the variables, print out the full name in one line and the sum of the two floating-point numbers in another line. \n",
         "\n",
         "**Exercise 1.15:** Write a python code that .\n",
         "\n",
