--- a/PythonBasics.ipynb
+++ b/PythonBasics.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNNhsKNU/fZOIGyWMSLSeI8",
+      "authorship_tag": "ABX9TyM1Xe6byZYYxWaPs6BtvG4I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -257,10 +257,39 @@
         "id": "Tk-xLANgKFGd"
       },
       "source": [
-        "**Exercise 1.1:** Create a variable named **Trainee** and assign your name to it. Also, print the value of the variable **Trainee**.\n",
-        "\n",
+        "**Exercise 1.1:** Create a variable named **Trainee** and assign your name to it. Also, print the value of the variable **Trainee**."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bAdVl41uE4jC"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_Ejug7mkE70T"
+      },
+      "source": [
         "**Exercise 1.2:** Create a variable named **Tempreture** and assign the day tempreture to it. Also, print the value of the variable **Tempreture**."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GuOs-AZrE5N2"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -379,6 +408,17 @@
       "source": [
         "**Exercise 1.3:** Write a code that contains two variables named **Trainee** and **Tutorial** and assign your name to the **Trainee** variable and the title of this tutorial to the **Tutorial** variable. Add comments to the code to explain the two variables. then print the two variables."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rcJStqoIE3J8"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -697,13 +737,59 @@
         "id": "J9hAM8vWqHsB"
       },
       "source": [
-        "**Exercise 1.4:** Create a variable that contains the names of the months of a year. Also, print the name of month 11.\n",
-        "\n",
-        "**Exercise 1.5:** Create a numeric float variable that equals 11.5. use casting to an integer to remove the fraction. Then print the float and integer variables.\n",
-        "\n",
-        "**Exercise 1.6:** Create a variable (list data type) that contains the following names 'Ahmad', 'Reema', 'Omar', and 'Salma'. Assume the name 'Salma' is repeated twice. Use casting to a set data type to remove the repeated name. print the original variable and the new variable.\n",
-        "\n"
+        "**Exercise 1.4:** Create a variable that contains the names of the months of a year. Also, print the name of month 11."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vvt61mLBEuht"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U1EWBZq_E0kN"
+      },
+      "source": [
+        "**Exercise 1.5:** Create a numeric float variable that equals 11.5. use casting to an integer to remove the fraction. Then print the float and integer variables."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5mMWetQvEvZ6"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jaG_U7EbEx5C"
+      },
+      "source": [
+        "**Exercise 1.6:** Create a variable (list data type) that contains the following names 'Ahmad', 'Reema', 'Omar', and 'Salma'. Assume the name 'Salma' is repeated twice. Use casting to a set data type to remove the repeated name. print the original variable and the new variable."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1JPBpx0uEv8f"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -816,10 +902,39 @@
         "id": "9VzyvmEHslGP"
       },
       "source": [
-        "**Exercise 1.7:** Write an if statement that decides if a floating number is positive or not. Print an output statement in both cases.\n",
-        "\n",
+        "**Exercise 1.7:** Write an if statement that decides if a floating number is positive or not. Print an output statement in both cases."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EWczjJy9EpfL"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Mmo_1JwCEsdH"
+      },
+      "source": [
         "**Exercise 1.8:** Assume a string variable **x** is a string of small letters. write an if statement to determine if this string is a name of one of the months."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FwVTz6KbEqSH"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -976,10 +1091,39 @@
         "id": "tTep4zmytuCa"
       },
       "source": [
-        "**Exercise 1.9:** Redo exercise 1.8 using for and if statements. \n",
-        "\n",
+        "**Exercise 1.9:** Redo exercise 1.8 using for and if statements. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wgoqI0mWEfw8"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4FUSKqjrEnI2"
+      },
+      "source": [
         "**Exercise 1.10:** Write a for and if statements to compare the elements of two lists. Print an output statement whether the two lists are similar or not."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8Y8n25WCEfQe"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1116,10 +1260,39 @@
         "id": "MvRGM4dOuhUK"
       },
       "source": [
-        "**Exercise 1.11:** Redo exercise 1.9 by defining a function.\n",
-        "\n",
+        "**Exercise 1.11:** Redo exercise 1.9 by defining a function."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pWgo2s3IEYue"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vCmep-uAEce7"
+      },
+      "source": [
         "**Exercise 1.12:** Redo exercise 1.10 by defining a function."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a_h4aK0bEaJM"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1298,18 +1471,96 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xKMZtyJ6ESwM"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ESYSNihf06sL"
       },
       "source": [
         "# General Exercises\n",
-        "**Exercise 1.14:** Write a python code that creates two string variables and two floating-point number variables. The first string should contain your first name. The second string should contain your family name. The two floating numbers should contain two random numbers. After creating the variables, print out the full name in one line and the sum of the two floating-point numbers in another line. \n",
-        "\n",
-        "**Exercise 1.15:** Write a python code that .\n",
-        "\n",
+        "**Exercise 1.14:** Write a python code that creates two string variables and two floating-point number variables. The first string should contain your first name. The second string should contain your family name. The two floating numbers should contain two random numbers. After creating the variables, print out the full name in one line and the sum of the two floating-point numbers in another line. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zZWRuwt5FBuH"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-1877rojFH6j"
+      },
+      "source": [
+        "**Exercise 1.15:** Write a python code that ."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ynyGX7JGFEpu"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ij_o-XFlFKDp"
+      },
+      "source": [
         "**Exercise 1.16:** Write a python code that ."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2wvODXXCFEEm"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gjGv2pJdFLB3"
+      },
+      "source": [
+        "**Exercise 1.17:** Write a python code that ."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "joBoYHavFNSj"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
