--- a/PythonBasics.ipynb
+++ b/PythonBasics.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM1Xe6byZYYxWaPs6BtvG4I",
+      "authorship_tag": "ABX9TyNpnU9TAoAsrqjsId0nir6Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1508,7 +1508,7 @@
         "id": "-1877rojFH6j"
       },
       "source": [
-        "**Exercise 1.15:** Write a python code that ."
+        "**Exercise 1.15:** Write a python code that creates six integer variables that represent two dates; D1/M1/Y1 and D2/M2/Y2. Write a code that determines which of the two dates is the newest date. Print on screen the newest date."
       ]
     },
     {
@@ -1528,7 +1528,7 @@
         "id": "Ij_o-XFlFKDp"
       },
       "source": [
-        "**Exercise 1.16:** Write a python code that ."
+        "**Exercise 1.16:** Write a python code that creates six integer variables that represent the current date D1/M1/Y1 and Date of Birth of a specific person D2/M2/Y2. Write a python code that computes the age of that person. Print the resulted age on screen. "
       ]
     },
     {
@@ -1548,7 +1548,7 @@
         "id": "gjGv2pJdFLB3"
       },
       "source": [
-        "**Exercise 1.17:** Write a python code that ."
+        "**Exercise 1.17:** Write a python code that reads text from a file and write it to another file."
       ]
     },
     {
