--- a/PandasBasics.ipynb
+++ b/PandasBasics.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN8Amt20SyARiZixM+yXNKf",
+      "authorship_tag": "ABX9TyOcgGtB2eVWTdp9af9Nc3L2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,9 +35,9 @@
         "# Pandas Basics\n",
         "By the end of this tutorial, you will be able to:\n",
         "\n",
-        "-       Recognize the importance of Python programing language and what it can do\n",
+        "-       Read and store data using Pandas\n",
         "\n",
-        "-       Be able to build a simple Python code that processes simple data"
+        "-       Manipulate data using Pandas"
       ]
     },
     {
@@ -89,7 +89,7 @@
         "print('\\n\\nThis is the Pandas DataFrame')\n",
         "print(brics)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,7 +170,7 @@
         "  \n",
         "print(brics) "
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,7 +211,7 @@
         "!rm -rf ./MachineLearning\n",
         "!git clone https://github.com/mkjubran/MachineLearning.git"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +257,7 @@
         "# Print out cars\n",
         "print(cars)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,7 +317,7 @@
         "# Print out DataFrame with Mileage and Sell Price($) columns\n",
         "print(cars[['Mileage', 'Age(yrs)']])"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +402,7 @@
         "# Print out fifth and sixth observation\n",
         "print(cars[4:6])"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -452,7 +452,7 @@
         "# Print out observations for BMW X5 and Audi A5\n",
         "print(cars.loc[['BMW X5', 'Audi A5']])"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
