--- a/PandasBasics.ipynb
+++ b/PandasBasics.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOcgGtB2eVWTdp9af9Nc3L2",
+      "authorship_tag": "ABX9TyOuo/el/BUon5DT5+0zF9Bg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -287,7 +287,7 @@
         "id": "fhY1V6KMNrN4"
       },
       "source": [
-        "## Indexing DataFrames\n",
+        "# Indexing DataFrames\n",
         "There are several ways to index a Pandas DataFrame. One of the easiest ways to do this is by using square bracket notation.\n",
         "\n",
         "In the example below, you can use square brackets to select one column of the cars DataFrame. You can either use a single bracket or a double bracket. The single bracket with output a Pandas Series, while a double bracket will output a Pandas DataFrame."
