--- a/StatisticsforDataScience.ipynb
+++ b/StatisticsforDataScience.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOZFMoj6XmZl6X4b7AmRC/u",
+      "authorship_tag": "ABX9TyP3RPfBjwbGPnOrjM/k/kuf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "id": "EL-byoYVKzD6"
       },
       "source": [
-        "# Pandas DataFrames"
+        "# Mean and Median"
       ]
     },
     {
@@ -53,19 +53,22 @@
         "id": "hCVxetA2H3UG"
       },
       "source": [
-        "Pandas is a high-level data manipulation tool developed by Wes McKinney. It is built on the Numpy package and its key data structure is called the DataFrame. DataFrames allow you to store and manipulate tabular data in rows of observations and columns of variables.\n",
+        "What can we learn from looking at a group of numbers?\n",
         "\n",
-        "There are several ways to create a DataFrame. One way way is to use a dictionary."
+        "In Machine Learning (and in mathematics) there are often three values that interests us:\n",
+        "\n",
+        "- Mean - The average value\n",
+        "- Median - The mid point value"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "9sSNC75THqcW",
-        "outputId": "396e8803-7883-4033-ac61-c886243f6b81",
+        "outputId": "30fc0152-99ff-47fd-bb92-92d99664be48",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 224
+          "height": 85
         }
       },
       "source": [
@@ -74,35 +77,77 @@
         "       \"area\": [8.516, 17.10, 3.286, 9.597, 1.221],\n",
         "       \"population\": [200.4, 143.5, 1252, 1357, 52.98] }\n",
         "\n",
-        "print('This is the dictionary data')\n",
-        "print(dict)\n",
-        "\n",
         "\n",
         "import pandas as pd  ## importing the pandas library\n",
+        "import numpy as np  ## importing the pandas library\n",
         "\n",
+        "brics = pd.DataFrame(dict); ## converting the dictionary data into pandas dataframe\n",
         "\n",
-        "brics = pd.DataFrame(dict) ## converting the dictionary data into pandas dataframe\n",
-        "\n",
-        "\n",
-        "print('\\n\\nThis is the Pandas DataFrame')\n",
-        "print(brics)"
+        "print('This is mean')\n",
+        "print(brics['area'].mean())\n",
+        "print('This is median')\n",
+        "print(brics['area'].median())\n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "This is the dictionary data\n",
-            "{'country': ['Brazil', 'Russia', 'India', 'China', 'South Africa'], 'capital': ['Brasilia', 'Moscow', 'New Dehli', 'Beijing', 'Pretoria'], 'area': [8.516, 17.1, 3.286, 9.597, 1.221], 'population': [200.4, 143.5, 1252, 1357, 52.98]}\n",
-            "\n",
-            "\n",
-            "This is the Pandas DataFrame\n",
-            "        country    capital    area  population\n",
-            "0        Brazil   Brasilia   8.516      200.40\n",
-            "1        Russia     Moscow  17.100      143.50\n",
-            "2         India  New Dehli   3.286     1252.00\n",
-            "3         China    Beijing   9.597     1357.00\n",
-            "4  South Africa   Pretoria   1.221       52.98\n"
+            "This is mean\n",
+            "7.944\n",
+            "This is median\n",
+            "8.516\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u0sy6S_MGrVy"
+      },
+      "source": [
+        "Using numpy arrays"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d-c1h4MSGoXu",
+        "outputId": "b6972bfc-db3f-43ab-e9e1-4610d0e1ca44",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        }
+      },
+      "source": [
+        "dict = {\"country\": [\"Brazil\", \"Russia\", \"India\", \"China\", \"South Africa\"],\n",
+        "       \"capital\": [\"Brasilia\", \"Moscow\", \"New Dehli\", \"Beijing\", \"Pretoria\"],\n",
+        "       \"area\": [8.516, 17.10, 3.286, 9.597, 1.221],\n",
+        "       \"population\": [200.4, 143.5, 1252, 1357, 52.98] }\n",
+        "\n",
+        "\n",
+        "import pandas as pd  ## importing the pandas library\n",
+        "import numpy as np  ## importing the pandas library\n",
+        "\n",
+        "brics = pd.DataFrame(dict); ## converting the dictionary data into pandas dataframe\n",
+        "\n",
+        "print('This is mean')\n",
+        "print(np.mean(brics['area']))\n",
+        "print('This is median')\n",
+        "print(np.median(brics['area']))"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "This is mean\n",
+            "7.944\n",
+            "This is median\n",
+            "8.516\n"
           ],
           "name": "stdout"
         }
@@ -584,7 +629,8 @@
       "source": [
         "# References\n",
         "\n",
-        "The material of this notebook excluding the exercises are selected from the pandas tutorial at learnpython.org."
+        "The material of this notebook excluding the exercises are selected from the S\n",
+        "tatistics for Data Science tutorial at w3schools.com."
       ]
     }
   ]
