--- a/PandasBasics.ipynb
+++ b/PandasBasics.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOzPrI+GxtEf1jJfAooYj5B",
+      "authorship_tag": "ABX9TyMoy/t7+iJYomHOX+KBNHM+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -594,7 +594,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "77f4f1d0-1fd5-47a4-d254-5877494c87d0"
+        "outputId": "f26e23ca-d8ee-423b-a584-56b0f57c1afd"
       },
       "source": [
         "# Import pandas and cars.csv\n",
@@ -606,7 +606,7 @@
         "print(type(x))\n",
         "cars['Mileage']"
       ],
-      "execution_count": 5,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -639,7 +639,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 34
         }
       ]
     },
@@ -660,7 +660,7 @@
           "height": 500
         },
         "id": "2EoD9PxFvBMz",
-        "outputId": "a8375a81-f16e-42a5-afe5-028a6e9bf0ff"
+        "outputId": "80efbb42-598d-4064-9c60-020668fa723b"
       },
       "source": [
         "# Print out Sell Price($) column as Pandas DataFrame\n",
@@ -668,7 +668,7 @@
         "print(type(x))\n",
         "cars[['Sell Price($)']]\n"
       ],
-      "execution_count": 6,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -784,7 +784,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 35
         }
       ]
     },
@@ -805,13 +805,13 @@
           "height": 483
         },
         "id": "Qrso0PjavZ8P",
-        "outputId": "5811ff85-082d-4f52-ca50-c2738c580eb2"
+        "outputId": "02c7d831-3ed3-4618-f4cf-21ee4e7a2115"
       },
       "source": [
         "# Print out DataFrame with Mileage and Sell Price($) columns\n",
         "cars[['Mileage', 'Age(yrs)']]"
       ],
-      "execution_count": 7,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -935,7 +935,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 36
         }
       ]
     },
@@ -965,13 +965,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "4ca17619-6daa-4f1a-b465-2fc5afe4fe2e"
+        "outputId": "e61a1799-8e25-4b0e-a21d-c7eddc9e6fde"
       },
       "source": [
         "# Print out first 4 observations\n",
         "cars[0:4]"
       ],
-      "execution_count": 8,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1047,7 +1047,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 37
         }
       ]
     },
@@ -1068,13 +1068,13 @@
           "height": 142
         },
         "id": "QAUqOTnMw5x8",
-        "outputId": "4513867b-583d-420f-e2fa-11b9d3d4e602"
+        "outputId": "b2a50949-29e0-4a02-ebb3-9917f31cfbb2"
       },
       "source": [
         "# Print out fifth and sixth observation\n",
         "cars[4:6]"
       ],
-      "execution_count": 9,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1136,7 +1136,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 38
         }
       ]
     },
@@ -1166,13 +1166,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 142
         },
-        "outputId": "fe26e28b-1b58-492e-8e75-26d41deca1cd"
+        "outputId": "ada51212-497f-493c-aad9-f5ae050c625d"
       },
       "source": [
         "# Print out observation for the car in the third row \n",
         "cars.iloc[4:6]"
       ],
-      "execution_count": 10,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1234,7 +1234,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 39
         }
       ]
     },
@@ -1255,13 +1255,13 @@
           "height": 359
         },
         "id": "UPTiT4-6xLND",
-        "outputId": "dfed9711-6d44-4104-acee-acb0830c56fa"
+        "outputId": "87bb4d03-12ca-4d64-dfb5-1e3fe7dd78fa"
       },
       "source": [
         "# Print out observations for BMW X5 and Audi A5\n",
         "cars.loc[['BMW X5', 'Audi A5']]"
       ],
-      "execution_count": 11,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1372,7 +1372,103 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CHXUa8tgoMew"
+      },
+      "source": [
+        "Print out observations for new cars (age less than 5 years)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 173
+        },
+        "id": "LWvDdp3LoQbd",
+        "outputId": "9233dc51-efad-4f2d-c6f8-d609b6232d66"
+      },
+      "source": [
+        "# Print out observations for new cars\n",
+        "cars.loc[cars['Age(yrs)']<5]"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Mileage</th>\n",
+              "      <th>Sell Price($)</th>\n",
+              "      <th>Age(yrs)</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Car Model</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>BMW X5</th>\n",
+              "      <td>35000</td>\n",
+              "      <td>34000</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>BMW X5</th>\n",
+              "      <td>22500</td>\n",
+              "      <td>40000</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>BMW X5</th>\n",
+              "      <td>46000</td>\n",
+              "      <td>31500</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           Mileage  Sell Price($)  Age(yrs)\n",
+              "Car Model                                  \n",
+              "BMW X5       35000          34000         3\n",
+              "BMW X5       22500          40000         2\n",
+              "BMW X5       46000          31500         4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
         }
       ]
     },
@@ -1382,7 +1478,7 @@
         "id": "ISERKG-0KOIK"
       },
       "source": [
-        "# Manipulating a DataFrames\n",
+        "# Manipulating DataFrames\n",
         "There are different ways to manipulate data within DataFrames."
       ]
     },
